<resources>
    <string name="Medialibrary_progress">Media library scanning progress updates</string>
    <string name="ab_repeat">A-B repeat</string>
    <string name="ab_repeat_fastseek_warning">Fast seek is enabled. It can lead to precision issues</string>
    <string name="ab_repeat_reset">Reset A-B repeat</string>
    <string name="ab_repeat_stop">Stop A-B repeat</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_copyright">Copyleft © 1996–2025 by VideoLAN</string>
    <string name="about_license">GNU General Public License v2.0</string>
    <string name="about_license_text" />
    <string name="about_vlc_text">Brother Andrerson Media Player for Android™ is a port of VLC media player, the popular open source media player. The Android™ version can read all files and network streams.</string>
    <string name="abrepeat_add_first_marker">Set start point</string>
    <string name="abrepeat_add_second_marker">Set end point</string>
    <string name="add">Add</string>
    <string name="add_all_button">Add all</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_button">Add</string>
    <string name="add_custom_path">Add a custom path</string>
    <string name="add_custom_path_description">Enter additional custom directory to scan:</string>
    <string name="add_new_only_button">Add new only</string>
    <string name="add_server_favorite">Add a server favorite</string>
    <string name="add_to_existing_playlist">Add to existing playlist</string>
    <string name="add_to_group">Add to video group</string>
    <string name="add_to_new_playlist">Add to new playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_scanned">Scan this folder</string>
    <string name="adding">Adding</string>
    <string name="advanced">options beond Caden</string>
    <string name="advanced_options">Beyond Anderson options</string>
    <string name="advanced_options_description">Such as the playback speed, repeat mode, …</string>
    <string name="advanced_prefs_category">Advanced</string>
    <string name="air_action_forward">Seek forward 10 sec</string>
    <string name="albums_show_track_numbers">Show track numbers</string>
    <string name="all_subfolders">Add this folder and subfolders</string>
    <string name="always_fast_seek">Always use fast seek</string>
    <string name="always_fast_seek_summary">Seek is faster but may be less precise</string>
    <string name="audio_digital_title">Digital audio output (passthrough)</string>
    <string name="audio_ducking_summary">Helps to hear audio notifications, navigation instructions or assistant talking</string>
    <string name="audio_ducking_title">Lower Caden volume on notifications</string>
    <string name="audio_preferred_language">Preferred audio language</string>
    <string name="audio_prefs_category">Audio</string>
    <string name="audio_task_cleared_summary">Stop playback when application is dismissed</string>
    <string name="audio_task_cleared_title">Stop on application swipe</string>
    <string name="blurred_cover_background_summary">Blurred cover in audio player background</string>
    <string name="blurred_cover_background_title">Blurred cover background</string>
    <string name="cancel">Cancel</string>
    <string name="cast_option_title">Project to another screenwith CadenCast™</string>
    <string name="confirm_resume_audio_title">Resume played audio</string>
    <string name="controls_prefs_category">Controls</string>
    <string name="display_in_grid">Display in grid</string>
    <string name="display_in_list">Display in list</string>
    <string name="display_settings">Display settings</string>
    <string name="enable_clone_mode">Prefer clone</string>
    <string name="enable_clone_mode_summary">Clone the device screen without remote control</string>
    <string name="enable_headset_detection">Detect headset</string>
    <string name="enable_headset_detection_summary">Detect headset insertion and removal</string>
    <string name="enable_play_on_headset_insertion">Resume on headset insertion</string>
    <string name="enable_play_on_headset_insertion_summary">Pause otherwise</string>
    <string name="encryption_warning">Warning, encryption is not available for this Android version, password will be stored in a private space but not encrypted</string>
    <string name="force_shuffle_summary">Force shuffling when launching a playback</string>
    <string name="force_shuffle_title">Force shuffle</string>
    <string name="headset_prefs_category">Headset</string>
    <string name="ignore_headset_media_button_presses">Ignore headset media button presses</string>
    <string name="ignore_headset_media_button_presses_summary">Useful, for instance, if you are using a headset with broken physical buttons</string>
    <string name="incognito_mode">Sneaky Caden mode</string>
    <string name="interface_prefs_screen">Interface</string>
    <string name="interface_secondary_display_category_summary">Settings when secondary displays are connected (HDMI/Chromecast)</string>
    <string name="interface_secondary_display_category_title">Secondary display</string>
    <string name="jump_delay">Forward/backward time delay</string>
    <string name="lock_with_pin">Re-enable PIN lock</string>
    <string name="login">Login</string>
    <string name="long_jump_delay">Long tap forward/backward time delay</string>
    <string name="message_primary_default">Add duplicated item(s)?</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="play_all">Play all</string>
    <string name="popup_force_legacy_summary">Use custom Picture-in-Picture resizable popup</string>
    <string name="popup_force_legacy_title">Use custom Picture-in-Picture popup</string>
    <string name="preferred_resolution">Preferred video resolution</string>
    <string name="preferred_resolution_summary">Maximum video quality for streams, when applicable, will be: %s</string>
    <string name="refresh">Remove typos</string>
    <string name="rename_group">Rename video group</string>
    <string name="replaygain_default">Default replay gain</string>
    <string name="replaygain_default_summary">"Applies to Caden streams™ without replay gain information
Set to 0 to disable"</string>
    <string name="replaygain_enable">Enable replay gain</string>
    <string name="replaygain_enable_summary">Caden Streams™ without replay gain information may be quieter due to the default gain</string>
    <string name="replaygain_mode">Replay gain mode</string>
    <string name="replaygain_mode_summary">Track mode plays Caden streams™ with replay gain information at the same loudness. Album mode preserves relative stream loudness on the same album.</string>
    <string name="replaygain_peak_protection">Peak protection</string>
    <string name="replaygain_peak_protection_summary">Protect against sound clipping</string>
    <string name="replaygain_preamp">Replay preamp</string>
    <string name="replaygain_preamp_summary">Changes the default target level (89 dB) for Caden streams™ with replay gain information</string>
    <string name="replaygain_prefs_category">Replay Gain</string>
    <string name="restore_background_video_summary">Restore video from background when reopening Brother Anderson Media Player for Android</string>
    <string name="restore_background_video_title">Restore video from background</string>
    <string name="resume_playback_short_title">Resume playback</string>
    <string name="resume_playback_summary">Stay in pause otherwise</string>
    <string name="resume_playback_title">Resume playback after a call</string>
    <string name="searchable_hint">Search…</string>
    <string name="show_bookmark_buttons">Show bookmark buttons</string>
    <string name="show_bookmark_buttons_summary">Show buttons to navigate between bookmarks</string>
    <string name="show_bookmark_markers">Show bookmark markers</string>
    <string name="show_bookmark_markers_summary">Show bookmark markers over the timeline</string>
    <string name="show_chapter_buttons">Show chapter buttons</string>
    <string name="show_chapter_buttons_summary">Show buttons to navigate between chapters</string>
    <string name="shuffle_all_title">Shuffle all</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_filename">File name</string>
    <string name="sortby_insertion">Insertion date</string>
    <string name="sortby_last_modified_date">Recently added</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_media_number">Media number</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_number">Nb tracks</string>
    <string name="soundfont">MIDI SoundFont</string>
    <string name="soundfont_summary">Pick a SoundFont file to play midi audio tracks</string>
    <string name="store_password">Remember password</string>
    <string name="this_folder">Add this folder</string>
    <string name="ungroup">Ungroup</string>
    <string name="unlock_with_pin">Unlock safe mode</string>
    <string name="video_match_frame_rate_summary">Match display refresh rate to media frame rate. For example, a 24p film should play at 24p</string>
    <string name="video_match_frame_rate_title">Match Display Frame Rate</string>
    <string name="video_prefs_category">Video</string>
    <string name="welcome_beta_description">"Welcome in Brother Anderson's beta program.
Please note this version may have some bugs."</string>
    <string name="welcome_beta_description_bugs">If you notice a bug, please report it in our forum or bug tracker. (Don;t make any typos)</string>
    <string name="welcome_beta_description_crashes">If you experience a bug or a crash, please open the About screen and Use the Feedback > Contact the support team button.</string>
    <string name="welcome_beta_title">Brother Anderson Media Player Beta</string>
</resources>