<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_pin_lock" android:id="@id/pin_relocked" android:visible="false" android:orderInCategory="0" android:title="@string/lock_with_pin" app:showAsAction="always" />
    <item android:icon="@drawable/ic_search" android:id="@id/ml_menu_filter" android:orderInCategory="1" android:title="@string/searchable_hint" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_display_settings" android:id="@id/ml_menu_display_options" android:visible="false" android:orderInCategory="2" android:title="@string/display_settings" app:showAsAction="collapseActionView|ifRoom" />
</menu>