<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:tag="layout/vlc_login_dialog_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/text" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:minWidth="600.0dip" android:layout_alignParentTop="true" />
        <com.google.android.material.textfield.TextInputLayout android:id="@id/login_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/text">
            <EditText android:id="@id/login" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="192.0dip" android:hint="@string/login" android:singleLine="true" android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/password_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/login_container">
            <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="200.0dip" android:hint="@string/password" android:singleLine="true" android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox android:id="@id/store" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/store_password" android:layout_below="@id/password_container" android:layout_alignParentStart="true" />
        <TextView android:id="@id/warning" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/encryption_warning" android:layout_below="@id/store" />
        <Button android:textSize="14.0sp" android:id="@id/cancel" android:tag="binding_5" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_below="@id/warning" android:layout_toStartOf="@id/action" style="@style/VLCDialogButton" />
        <Button android:textSize="14.0sp" android:id="@id/action" android:tag="binding_6" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_below="@id/warning" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" style="@style/VLCDialogButton" />
    </RelativeLayout>
</ScrollView>